RESOLVED FIXED263753
Canvas::closePath should not iterate all segments to compute subpath existence
https://bugs.webkit.org/show_bug.cgi?id=263753
Summary Canvas::closePath should not iterate all segments to compute subpath existence
Yusuke Suzuki
Reported 2023-10-26 17:21:40 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-26 17:23:26 PDT
Yusuke Suzuki
Comment 2 2023-10-26 17:31:44 PDT
EWS
Comment 3 2023-10-27 14:16:42 PDT
Committed 269867@main (3abfea5879bc): <https://commits.webkit.org/269867@main> Reviewed commits have been landed. Closing PR #19615 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.